# stargem_backend.rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix  image.nix  justfile  onthology.md  prompt.txt
.github/workflows/: ci.yml
.opencode/plans/: 2026-06-19-missing-test-scenarios-design.md  2026-06-19-missing-test-scenarios-plan.md
compose/: docker-compose.dev.yml  docker-compose.test.yml  init.sql
config/: damage_multipliers.toml
config/ships/: README.md  command.toml  cover_ops.toml  ecm.toml  engineer.toml  guard.toml  gunship.toml  long_range.toml  recon.toml  tackler.toml
sql/: schema.sql  seed.sql
src/: auth.rs  database.rs  error.rs  frontend.rs  game_mode.rs  grpc.rs  lib.rs  main.rs  scenarios.rs  spectator.rs
src/api/: handlers.rs
src/combat/: damage.rs  mod.rs  physics.rs  tick.rs
src/db/: mod.rs  pool.rs  repository.rs  schema.rs  schema.sql
src/domain/: game_instance.rs  mod.rs  ship.rs  user.rs
src/game/: combat.rs  instance.rs  matchmaker.rs  mod.rs
src/network/: mod.rs  protocol.rs  server.rs  session.rs  tls.rs
src/proto_gen/: mod.rs
src/proto_gen/grpc/: mod.rs  stargem.auth.rs  stargem.grpc.spectator.rs  stargem.hangar.rs  stargem.loadout.rs  stargem.match_history.rs  stargem.matchmaking.rs  stargem.shop.rs
src/proto_gen/quic/: mod.rs  stargem.quic.combat.rs  stargem.quic.common.rs
src/security/: rate_limit.rs
src/ship/: active_module_state.rs  active_modules.rs  missile_models.rs  missiles.rs  mod.rs  model.rs  modules.rs  stats.rs  weapon_heat.rs  weapons.rs
src/transport/: quic.rs
tests/: common.rs  domain_game_test.rs  domain_hangar_test.rs  domain_ship_test.rs  domain_stats_test.rs  game_combat_test.rs  game_matchmaker_test.rs  integration_combat_test.rs  ship_destruction_scenario.rs  spectator_subscribe.rs
tests/common/: scenarios.rs
tests/integration/: mod.rs
tests/integration/combat/: combat_test.rs
tests/integration/common/: db.rs  fixtures.rs  mod.rs
