[package]
name = "stargem-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-build = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
bytes = "1.6"
rustls = "0.23"
tokio-rustls = "0.26"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.40", features = ["full"] }
mockall = "0.13"
tempfile = "3.12"
serial_test = "3.1"
once_cell = "1.19"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }


[[bin]]
name = "stargem-server"
path = "src/main.rs"

[lib]
name = "stargem_server"
path = "src/lib.rs"
