[package]
name = "stargem-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
quinn = "0.10"
rustls = "0.22"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
rcgen = "0.12"

[build-dependencies]
tonic-build = "0.11"
