[package]
name = "stargem-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
quinn = "0.10"
rustls = "0.21"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
rcgen = "0.12"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "scenario-runner"
path = "src/bin/scenario_runner.rs"

[[bin]]
name = "scenario-picker"
path = "src/bin/scenario_picker.rs"
